--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <div class="footer__columns">
        <div class="footer__column_content_copyright">
          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
-         <p class="footer__author">&copy 2021 Антипин Артем</p>
+         <p class="footer__author">&copy;2021 Антипин Артем</p>
        </div>
        <div class="footer__column_content_info">
          <p class="footer__column-heading">О Практикуме</p>
@@ -151,9 +151,9 @@
        <div class="footer__column_content_social">
         <p class="footer__column-heading">Соцсети</p>
         <div class="footer__column-links">
-        <a class="footer__column-link" href=""><img class="footer__social-icon" src="./images/facebook_color_white.svg">Facebook</a>
-        <a class="footer__column-link" href=""><img class="footer__social-icon" src="./images/vk_color_white.svg">ВКонтакте</a>
-        <a class="footer__column-link" href=""><img class="footer__social-icon" src="./images/instagram_color_white.svg">Instagram</a>
+        <a class="footer__column-link" href=""><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Facebook">Facebook</a>
+        <a class="footer__column-link" href=""><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка Вконтакте">ВКонтакте</a>
+        <a class="footer__column-link" href=""><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Instagram">Instagram</a>
         </div>
        </div>
       </div>
