--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./index/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -15,11 +15,11 @@
         вы можете использовать в своей жизни?
       <a href="" class="header__link hover">Узнать →</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Картина опять двойка">
-      <div class="header__square-pic rotation"></div>
+      <div class="header__square-pic "></div>
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
@@ -32,7 +32,7 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
               Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="techniques">
@@ -40,27 +40,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/cards-attention.png" alt="">
+            <img class="cards__image" src="./images/images_sprint-2/cards-attention.png" alt="101 эссе, которые изменят ваше мышление">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/cards-recall.png" alt="">
+            <img class="cards__image" src="./images/images_sprint-2/cards-recall.png" alt="Воспоминание">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/cards-interliving.png" alt="">
+            <img class="cards__image" src="./images/images_sprint-2/cards-interliving.png" alt="Интерливинг">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/cards-question.png" alt="">
+            <img class="cards__image" src="./images/images_sprint-2/cards-question.png" alt="Вопросы">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/cards-competence.png" alt="">
+            <img class="cards__image" src="./images/images_sprint-2/cards-competence.png" alt="И">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -76,7 +76,7 @@
         </div>
       </section>
 
-      <section class="oakley">
+      <article class="oakley">
         <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
@@ -87,7 +87,7 @@
               Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
         </div>
-      </section>
+      </article>
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
@@ -99,42 +99,42 @@
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
-          <ul class="table">
-            <li class="table__cell">
-              <h3 class="table__heading">86 миллиардов</h3>
-              <p class="table__text">Число нейронов в мозге человека</p>
-            </li>
-            <li class="table__cell">
-              <h3 class="table__heading">2.1 миллиарда</h3>
-              <p class="table__text">Число нуждающихся в повышении квалификации</p>
-              <p class="table__text">Всемирный Банк, 2017</p>
-            </li>
-            <li class="table__cell">
-              <h3 class="table__heading">1000 терабайт</h3>
-              <p class="table__text">Объём памяти человека</p>
-            </li>
-            <li class="table__cell">
-              <h3 class="table__heading">500 триллионов</h3>
-              <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-            </li>
-            <li class="table__cell">
-              <h3 class="table__heading">420 миллионов</h3>
-              <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-              <p class="table__text">Всемирный Банк, 2017</p>
-            </li>
-            <li class="table__cell">
-              <h3 class="table__heading">17–20 лет</h3>
-              <p class="table__text">Пик обучаемости</p>
-            </li>
-            <li class="table__cell">
-              <h3 class="table__heading">1885 год</h3>
-              <p class="table__text">Открытие кривой забывания</p>
-            </li>
-            <li class="table__cell">
-              <h3 class="table__heading">1889 год</h3>
-              <p class="table__text">Открытие условного рефлекса</p>
-            </li>
-          </ul>
+        <ul class="table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
       <section class="khan">
@@ -146,7 +146,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/images_sprint-2/khan-book.jpg" alt="">
+            <img class="khan__book-pic" src="./images/images_sprint-2/khan-book.jpg" alt="Книга Весь мир - школа">
             <a href="" class="khan__buy-link">Купить книгу  →</a>
           </div>
         </div>
@@ -203,12 +203,12 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайвхаках обучения</p>
-        <div class="resources__logo-zone">
-          <a href=""><img class="resources__logo" src="./images/images_sprint-2/logo/resources-arzamas.svg" alt=""></a>
-          <a href=""><img class="resources__logo" src="./images/images_sprint-2/logo/resources-n1.svg" alt=""></a>
-          <a href=""><img class="resources__logo" src="./images/images_sprint-2/logo/resources-strelka.svg" alt=""></a>
-          <a href=""><img class="resources__logo" src="./images/images_sprint-2/logo/resources-polka.svg" alt=""></a>
-        </div>
+        <ul class="resources__logo-zone">
+          <li><a href=""><img class="resources__logo" src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="Арзамас"></a></li>
+          <li><a href=""><img class="resources__logo" src="./images/images_sprint-2/logo/resources-n1.svg" alt="Н1"></a></li>
+          <li><a href=""><img class="resources__logo" src="./images/images_sprint-2/logo/resources-strelka.svg" alt="Стрелка"></a></li>
+          <li><a href=""><img class="resources__logo" src="./images/images_sprint-2/logo/resources-polka.svg" alt="Полка"></a></li>
+        </ul>
       </section>
     </main>
 
