--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         вы можете использовать в своей жизни?
       <a href="" class="header__link hover">Узнать →</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Картина опять двойка">
-      <div class="header__square-pic "></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
